--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -4,7 +4,7 @@ server {
     index index.php index.html index.htm;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    server_name dev.rest-api.com;
+    server_name death.star.api;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
