--- a/docker/nginx/site.conf
+++ b/docker/nginx/site.conf
@@ -7,7 +7,7 @@ server {
     server_name death.star.api;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri /index.php?url=$uri;
         keepalive_timeout 65;
         sendfile off;
     }
