--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
   "require": {
     "php-di/php-di": "^6.0",
     "vlucas/phpdotenv": "^2.5"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7.3"
   }
 }
